--- a/netcore/Minitwit.API/Views/Home/Privacy.cshtml
+++ b/netcore/Minitwit.API/Views/Home/Privacy.cshtml
@@ -1,6 +1,12 @@
-﻿@{
+﻿@model UserViewModel
+
+@{
     ViewData["Title"] = "Privacy Policy";
 }
+
+
 <h1>@ViewData["Title"]</h1>
+
+@Model.Mail
 
 <p>Use this page to detail your site's privacy policy.</p>
